# ci-cd-test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
tests/: test_main.py
