[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-test"
version = "0.1.0"
description = "Simple FastAPI project with typing and Pydantic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "build>=1.4.2",
  "httpx>=0.28.0",
  "pre-commit>=4.5.1",
  "pytest>=8.3.0",
  "ruff>=0.15.9",
  "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools.packages.find]
include = ["app*"]
